# AI-Based-Web-System-for-Adaptive-Traffic-Signal-Control-Using-Deep-Reinforcement-Learning

./: .gitignore  README.md  commit_guide.txt
Server/: .env  package-lock.json
Server/src/: index.js
Server/src/config/: index.js
Server/src/middlewares/: auth.js
Server/src/routes/: index.js
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/api/: auth.ts  axios.ts
client/src/api/ParamsInterface/: LoginParams.ts  RegisterParam.ts
client/src/components/: Test.tsx
client/src/config/: axios.ts  axiosAuth.ts  firebase.ts
client/src/i18n/: index.ts
client/src/i18n/en/: translation.json
client/src/i18n/fr/: translation.json
client/src/i18n/vi/: translation.json
client/src/layout/: EmptyLayout.tsx  MainLayout.tsx
client/src/layout/components/: MainHeader.tsx  MainSider.tsx
client/src/locale/: index.tsx
client/src/pages/: TestPage.tsx
client/src/router/: index.tsx  privateRoute.tsx
client/src/routes/: index.tsx
client/src/stores/: app.slice.ts  hooks.ts  index.ts  user.slice.ts
client/src/styles/: main.scss
core/: .gitignore  README.md  pyproject.toml
core/src/: main.py
core/src/api/: routers.py
core/src/api/endpoints/: authentication.py  sumo.py  traffic_simulation.py  user.py  ws_sumo.py
core/src/controllers/: traffic_controller.py  users.py
core/src/core/: config.py  errors.py  jwt.py  sumo_manager.py
core/src/data/: calibrator_7_optimized.xml  calibrator_8_optimized.xml  calibrator_new.xml  calibrator_optimized.xml  detector_output.xml  detectors_hour_7_fixed.xml  display.gui-settings.xml  filter_calibrator.py  generate_sumocfg.py  new_routes.rou.xml  optimize_calibrator_file.py  region_1.net.xml  routes_7am_8am.rou.xml  routes_8am_9am.rou.xml  test1.sumocfg  traffic_simulation.sumocfg
core/src/db/: mongodb.py  mongodb_utils.py
core/src/models/: dbmodel.py  rwmodels.py  token.py  traffic_model.py  users.py
core/src/services/: sumo_services.py
model/: .gitignore  README.md  pyproject.toml
model/model/src/model/data/map/: region_1.osm
model/src/model/: config.py  main.py  test.py
model/src/model/agents/: intersection_agent.py  lstm_policy.py  lstml.py  share_critic_network.py
model/src/model/configs/: network_config.py
model/src/model/coordinators/: communication_protocol.py  global_state_aggregator.py  multiagent_coordinator.py  multiagent_coordinator_advance.py
model/src/model/data/intersections/: intersection_list.csv  intersection_mapping.csv
model/src/model/data/map/: region_1.osm  region_bbox.osm
model/src/model/data/traffic/: traffic_data_friday_2025-05-16.csv  traffic_data_thursday_2025-05-15.csv  traffic_data_wednesday_2025-05-14.csv
model/src/model/environment/: main.py  traffic_action_space.py  traffic_control_space_manager.py  traffic_phase.py  traffic_reward_fucntion.py  traffic_reward_function.py  traffic_state_space.py
model/src/model/sumo_files/: enhance_calibrator.py  enhance_detectors.py  region_1.sumocfg
model/src/model/sumo_files/additional/: detector_output.xml  detectors_hour_8.xml
model/src/model/sumo_files/network/: quan_1.net.xml  region_1.net.xml  region_bbox.net.xml
model/src/model/sumo_files/output/: tripinfo.xml
model/src/model/sumo_files/routes/: check_route.py  generated_routes.rou.xml  region_1.rou.xml
model/src/model/sumo_files/traffic_lights/: region_1.tl.xml
model/src/model/utils/: collect_traffic_data.py  create_demand_file.py  create_sumo_config_file.py  create_traffic_light_config.py  experience_buffer.py  extract_junction.py  generate_mapping.py  map_downloader.py  mapping_evaluation.py  new_wrapper.py  osm_to_sumo.py  test_sumo_connection.py  wrapper_78.py  wrapper_randomtrips.py
(+26 files in other folders)
