[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "Hoanghuygia",email = "hoanghuy051230@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "osmnx (>=2.0.2,<3.0.0)",
    "sumolib (>=1.22.0,<2.0.0)",
    "traci (>=1.22.0,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "model", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
