[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "Hoanghuygia",email = "hoanghuy051230@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "osmnx (>=2.0.2,<3.0.0)",
    "sumolib (>=1.22.0,<2.0.0)",
    "traci (>=1.22.0,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "folium (>=0.19.6,<0.20.0)",
    "ray[rllib] (>=2.8.0,<2.9.0)",
    "gymnasium (>=0.28.1,<0.29.0)",
    "tensorboard (>=2.15.0,<2.16.0)",
    "wandb (>=0.16.0,<0.17.0)",
    "opencv-python (>=4.8.0,<4.9.0)",
    "seaborn (>=0.13.0,<0.14.0)"
]

[tool.poetry]
packages = [{include = "model", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
